Fix T55722 : Blender 2.8 crashes on startup on old Nvidia cards